--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,9 +18,7 @@
 			"package": "opencode-ai",
 			"version": "latest"
 		},
-		"ghcr.io/schlich/devcontainer-features/jujutsu:0": {
-			"version": "latest"
-		}
+		"ghcr.io/devcontainers-extra/features/uv:1": {}
 	},
 	"customizations": {
 		"vscode": {
