--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,8 +17,8 @@
 		"ghcr.io/devcontainers-extra/features/npm-package:1": {
 			"package": "opencode-ai",
 			"version": "latest"
-		},
-		"ghcr.io/devcontainers-extra/features/uv:1": {}
+		}
+		// "ghcr.io/devcontainers-extra/features/uv:1": {}
 	},
 	"customizations": {
 		"vscode": {
