--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,27 +3,33 @@
 {
 	"name": "Some project",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/universal:2-linux",
+	"image": "mcr.microsoft.com/devcontainers/universal:4-linux",
 	"mounts": [
-		{ "source": "${localEnv:HOME}/.opencode", "target": "/home/codespace/.local/share/opencode", "type": "bind" }
+		{ "source": "${localEnv:HOME}/.opencode", "target": "/home/codespace/.local/share/opencode", "type": "bind" },
+		{ "source": "${localEnv:HOME}/intelephense/licence.txt", "target": "/home/codespace/intelephense/licence.txt", "type": "bind" }
 	],
 	"features": {
-		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {},
+		// Docker is needed to run the Playwright MCP server
 		"ghcr.io/devcontainers/features/git:1": {
 			"version": "latest"
 		},
-		"ghcr.io/devcontainers/features/github-cli:1": {},
+		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {},
+		// "ghcr.io/devcontainers/features/github-cli:1": {},
 		// "ghcr.io/joshuanianji/devcontainer-features/github-cli-persistence:1": {},
-		"ghcr.io/devcontainers-extra/features/npm-package:1": {
-			"package": "opencode-ai",
-			"version": "latest"
+		"ghcr.io/devcontainers-extra/features/npm-packages:1": {
+			"packages": "opencode-ai,@fission-ai/openspec"
 		}
 		// "ghcr.io/devcontainers-extra/features/uv:1": {}
 	},
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"sst-dev.opencode"
+				"sst-dev.opencode",
+				"fedaykindev.openchamber",
+				"editorconfig.editorconfig",
+				"nhoizey.gremlins",
+				"streetsidesoftware.code-spell-checker-spanish",
+				"streetsidesoftware.code-spell-checker"
 			]
 		}
 	}
@@ -33,9 +39,6 @@
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "uname -a",
-
-	// Configure tool-specific properties.
-	// "customizations": {},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
