Add configuration files and scripts for project setup, including skill-lock, package management, and deployment instructions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,8 +3,15 @@
 	"image": "mcr.microsoft.com/devcontainers/universal:5-linux",
 
 	"mounts": [
+		// OpenCode config and data - https://opencode.ai/docs/cli/#configuration-and-data
 		{ "source": "${localEnv:HOME}/.opencode", "target": "/home/codespace/.local/share/opencode", "type": "bind" },
-		{ "source": "${localEnv:HOME}/intelephense/licence.txt", "target": "/home/codespace/intelephense/licence.txt", "type": "bind" }
+		{ "source": "${localEnv:HOME}/.local/state/opencode", "target": "/home/codespace/.local/state/opencode", "type": "bind" },
+		// Global vercel skills config
+		{ "source": "${localWorkspaceFolder}/.agents/.skill-lock.json", "target": "/home/codespace/.agents/.skill-lock.json", "type": "bind" },
+		// GitHub CLI config
+		{ "source": "${localEnv:HOME}/.config/gh/", "target": "/home/codespace/.config/gh/", "type": "bind" },
+		// Uncomment if you have an (PHP) Intelephense license and want to use it in the container (for opencode and oraios/serena)
+		// { "source": "${localEnv:HOME}/intelephense/licence.txt", "target": "/home/codespace/intelephense/licence.txt", "type": "bind" }
 	],
 
 	"remoteEnv": {
@@ -24,16 +31,20 @@
 		"PATH": "${containerEnv:PATH}:scripts",
 		// For usage with /editr command from OpenCode - https://opencode.ai/docs/tui/#editor-setup
 		"EDITOR": "code --wait",
-		"VISUAL": "code --wait"
+		"VISUAL": "code --wait",
+		"XDG_CONFIG_HOME": "/home/codespace/.config",
+    "XDG_CACHE_HOME": "/home/codespace/.cache",
+    "XDG_DATA_HOME": "/home/codespace/.local/share",
+    "XDG_STATE_HOME": "/home/codespace/.local/state"
 	},
 
 	"features": {
 		// "ghcr.io/devcontainers/features/git:1": {
 		// 	"version": "latest"
 		// },
-		// "ghcr.io/joshuanianji/devcontainer-features/github-cli-persistence:1": {},
+		"ghcr.io/devcontainers-extra/features/shfmt:1": {},
 		"ghcr.io/devcontainers-extra/features/npm-packages:1": {
-			"packages": "opencode-ai,@github/copilot,@google/gemini-cli,@covibes/zeroshot,agent-browser"
+			"packages": "opencode-ai,@github/copilot,@google/gemini-cli,@covibes/zeroshot,agent-browser,repomix"
 		},
 		"ghcr.io/devcontainers-extra/features/uv:1": {}
 	},
@@ -45,7 +56,8 @@
 				"editorconfig.editorconfig",
 				"nhoizey.gremlins",
 				"streetsidesoftware.code-spell-checker-spanish",
-				"streetsidesoftware.code-spell-checker"
+				"streetsidesoftware.code-spell-checker",
+				"GitHub.copilot-chat"
 			]
 		}
 	},
@@ -54,10 +66,18 @@
 		"Setup agent browser": "agent-browser install --with-deps",
 		"Configure zeroshot provider": "zeroshot providers set-default Opencode",
 		"Pull playwright image": "docker pull $PLAYWRIGHT_DOCKER_IMAGE"
-	}
+	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	"forwardPorts": [
+		// Add your own ports here
+		4096
+	],
+	"portsAttributes": {
+    "4096": {
+      "label": "Default OpenCode server"
+    }
+  },
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
